--- a/billing_invoice/frontend/billing-application/package.json
+++ b/billing_invoice/frontend/billing-application/package.json
@@ -11,13 +11,14 @@
     "file-saver": "^2.0.5",
     "html2canvas": "^1.4.1",
     "jspdf": "^2.5.2",
+    "lucide-react": "^0.477.0",
     "papaparse": "^5.5.2",
     "react": "^19.0.0",
     "react-autosuggest": "^10.1.0",
     "react-bootstrap": "^2.10.9",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
-    "react-router-dom": "^7.1.5",
+    "react-router-dom": "^7.2.0",
     "react-scripts": "5.0.1",
     "react-spinners": "^0.15.0",
     "react-toastify": "^11.0.3",
